--- a/index.html
+++ b/index.html
@@ -206,8 +206,7 @@
                 <figure class="cc-effect"><img src="images\FAACERT.jpg" alt="Image"/>
                     <figcaption>
                       <div class="h4">Part 107</div>
-                      <p>I have over 50 hours of drone flight time surveying power lines in Northern California. I worked for a subcontractor supporting PG&E’s vegetation management program, where I conducted aerial inspections to help identify potential hazards and ensure regulatory compliance. 
-                        This role gave me hands-on experience with drone operations in challenging terrain and contributed directly to wildfire prevention efforts.</p> </p>
+                      <p>I have over 50 hours of drone flight time surveying Rice fields in Northern California. By providing actionable data quickly and cost-effectively, I was able to help farmers make informed decisions, reduce resource waste, and support sustainable agriculture practices.</p> </p>
                 
 
                     </figcaption>
@@ -238,7 +237,7 @@
                         <figure class="cc-effect"><img src="images\FireMap.jpeg"  alt="Image"/>
                           <figcaption>
                             <div class="h4">Supervised Calssification</div>
-                            <p>My participation in the UN Secondary Cities project enabled me to run supervised classifications on high resolution satellite imagery to monitor geographical growth of multiple cities in developing nations. I was able to apply this knowledge to my current position by creating shape files of multiple burn scars in Northern California. These shapefiles were then used to define projects scope and determine areas of interest. </p>
+                            <p>My participation in the United Nations Secondary Cities project enabled me to run supervised classifications on high resolution satellite imagery to monitor geographical growth of multiple cities in developing nations. I was able to apply this knowledge to my current position by creating shape files of multiple burn scars in Northern California. These shapefiles were then used to define projects scope and determine areas of interest. </p>
                           </figcaption>
                         </figure></a></div>
                       </div>
@@ -247,7 +246,7 @@
                   <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development">
                       <figure class="cc-effect"><img src="images\ISA_Cert.jpeg"  alt="Image"/>
                         <figcaption>
-                          <div class="h4">Supervised Calssification</div>
+                          <div class="h4">TRAQ Arborist</div>
                           <p>I am a Certified Tree Risk Assessment Professional (TRAQ) arborist with a strong foundation in identifying, assessing, and managing tree-related hazards. My certification demonstrates my commitment to industry standards in arboriculture and my ability to evaluate structural defects, environmental conditions, and overall tree health. This expertise supports my work in forestry, environmental planning, and GIS by ensuring that tree risk considerations are integrated into land management and development decisions. </p>
                         </figcaption>
                       </figure></a></div>
@@ -301,11 +300,12 @@
             <div class="h5">RPF Designee</div>
             <p>
               Managed teams of VMI and directed vegetation management programs. I worked diligently with contractors to optimize runways while ensuring compliance with applicable regulations, including permits and environmental protection measures.
-              I conducted aerial inspections to help identify potential hazards and ensure regulatory compliance. This role gave me hands-on experience with drone operations in challenging terrain and contributed directly to wildfire prevention efforts.  
-          </div>
+              I conducted aerial inspections to help identify potential hazards and ensure regulatory compliance. 
         </div>
       </div>
     </div>
+    </div>
+    
 
     <div class="card mb-4">
       <div class="row">
